--- a/src/app/Ui/Modules/Carga_Inventario/Page/lista-carga-inventarios/lista-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/lista-carga-inventarios/lista-carga-inventarios.component.html
@@ -41,9 +41,9 @@
 </header>
 
 <!-- ========== START - TABLA ========== -->
-<div class="w-full lg:ps-64">
-  <div class="w-full lg:ps-0">
-    <div class="px-4 sm:px-4 sm:pt-4 space-y-4 sm:space-y-6">
+<div class="w-full lg:ps-64 h-auto">
+  <div class="w-full lg:ps-0 h-auto">
+    <div class="px-4 sm:px-4 sm:pt-4 h-auto space-y-4 sm:space-y-6">
       <lista-inventarios-cargados
         [dataListaInventarios]="datosInventarioslista"
         (filtrosInventario)="aplicarFiltros($event)"
