07_03_2025 MEJORA DISEÑO ANULAR INVENTARIO

--- a/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-anular-inventario/button-anular-inventario.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-anular-inventario/button-anular-inventario.component.html
@@ -1,9 +1,9 @@
-<div class="px-1 py-1">
-  <button
+<button
   (click)="ObtenerDetatosInventarios()"
-  class=" py-2 px-1  flex items-center justify-center gap-x-2 text-xs rounded-lg  bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none "
-    type="button"
-  >
-  <mat-icon>delete</mat-icon>
-  </button>
-</div>
+  type="button"
+  data-bs-toggle="offcanvas"
+  aria-controls="hs-detalles-inventario"
+  class="flex shrink-0 justify-center items-center gap-2 size-11 text-sm font-medium rounded-lg  border-transparent bg-white text-blue-700 hover:bg-blue-700 focus:outline-hidden focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none"
+>
+  <mat-icon class="text-blue-600]">delete</mat-icon>
+</button>
