--- a/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-asignar/button-asignar.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/buttons/button-asignar/button-asignar.component.html
@@ -1,12 +1,10 @@
-<div class="px-1 py-1">
-  <button
-  (click)="ObtenerDetatosInventarios()"
-  class="btn py-2 px-1 inline-flex items-center gap-x-2 text-xs rounded-lg  bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none "
-    type="button"
-    data-bs-toggle="modal"
-    data-bs-target="#staticBackdrop"
-    aria-controls="hs-detalles-inventario"
-  >
-  <mat-icon>person</mat-icon>
-  </button>
-</div>
+<button
+(click)="ObtenerDetatosInventarios()"
+class="flex shrink-0 justify-center items-center gap-2 size-11 text-sm font-medium rounded-lg  border-transparent bg-white text-blue-700 hover:bg-blue-700 focus:outline-hidden focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none"
+type="button"
+data-bs-toggle="modal"
+data-bs-target="#staticBackdrop"
+aria-controls="hs-detalles-inventario"
+>
+<mat-icon>person_add</mat-icon>
+</button>
