--- a/src/app/Ui/Modules/AJUSTES-INVENTARIO/components/tabla-ajustes-inventario-datos/tabla-ajustes-inventario-datos.component.html
+++ b/src/app/Ui/Modules/AJUSTES-INVENTARIO/components/tabla-ajustes-inventario-datos/tabla-ajustes-inventario-datos.component.html
@@ -25,7 +25,7 @@
       Guardar Ajustes
     </button>
 
-    <button
+    <!-- <button
       mat-raised-button
       color="primary"
       disabled
@@ -34,7 +34,7 @@
     >
       <mat-icon>save</mat-icon>
       Cerrar Ajuste
-    </button>
+    </button> -->
   </div>
 </div>
 
