07_03_2025 ACULTAR BUTTON TARJET REPORTE FALTANTE

--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -114,7 +114,7 @@
         <p class="text-[3rem] font-bold text-[#20477E]">{{ ItemsAjustados }}</p>
       </button>
 
-      <button
+      <!-- <button
       class="bg-gray-100 p-6 rounded-xl shadow-md border-2 border-gray-300
      transition duration-200 cursor-not-allowed
       text-center flex flex-col gap-4 justify-center items-center"
@@ -125,7 +125,7 @@
           Registros sin leer
         </p>
         <p class="text-sm text-gray-500">(FALTA IMPLEMENTAR)</p>
-      </button>
+      </button> -->
     </div>
   </div>
 </div>
