--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/desing-page-tabla-ajustados/desing-page-tabla-ajustados.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/desing-page-tabla-ajustados/desing-page-tabla-ajustados.component.html
@@ -16,7 +16,7 @@
     <!-- codigoproducto -->
     <!-- =================================================================================== -->
     <ng-container matColumnDef="codigoproducto">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>codigoproducto</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Código producto</th>
       <td mat-cell *matCellDef="let row">
         <button
           class="px-6 py-3 flex gap-2 align-center"
@@ -36,7 +36,7 @@
     <!-- codigobarra -->
     <!-- =================================================================================== -->
     <ng-container matColumnDef="codigobarra">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>codigobarra</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Código de barras</th>
       <td mat-cell *matCellDef="let row">
         <button
           class="px-6 py-3 flex gap-2 align-center"
@@ -134,11 +134,12 @@
       </td>
     </ng-container>
 
+
     <!-- =================================================================================== -->
     <!-- Rack -->
     <!-- =================================================================================== -->
     <ng-container matColumnDef="stockresultante">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>stockresultante</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Resultado</th>
       <td mat-cell *matCellDef="let row">
         <button
           class="px-6 py-3 flex gap-2 align-center"
@@ -150,18 +151,18 @@
           <span
             class="text-sm text-gray-600"
             [ngClass]="{
-          ' text-red-600': row.stockF - row.stockL + row.ajuste  < 0,
-          ' text-blue-700': row.stockF - row.stockL + row.ajuste  > 0,
-          ' text-gray-600': row.stockF - row.stockL + row.ajuste  == 0,
+          ' text-red-600': row.stockF - row.stockL   < 0,
+          ' text-blue-700': row.stockF - row.stockL   > 0,
+          ' text-gray-600': row.stockF - row.stockL  == 0,
         }"
           >
-            {{ row.stockF - row.stockL + row.ajuste }}
+            {{ row.stockF - row.stockL}}
           </span>
         </button>
       </td>
     </ng-container>
 
-    <!-- =================================================================================== -->
+        <!-- =================================================================================== -->
     <!-- Ajuste -->
     <!-- =================================================================================== -->
     <ng-container matColumnDef="ajuste">
@@ -187,6 +188,8 @@
         </button>
       </td>
     </ng-container>
+
+
 
 
     <!-- =================================================================================== -->
