--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -66,7 +66,7 @@
         (click)="ObtenerDetalleInventariosPDF(2, 0)"
       >
         <p class="text-[#0158DD] font-semibold text-center">
-          Registros sin faltantes
+          Registros  sobrantes
         </p>
         <p class="text-[3rem] font-bold text-[#0158DD]">
           {{ RegistrosNoFaltantes }}
